# osint-x

./: README.md
osint-x/: CMakeLists.txt
osint-x/frontend/: app.js  index.html  style.css
osint-x/include/: config.hpp
osint-x/src/: main.cpp
osint-x/src/core/: EmailLookup.hpp  IPLookup.hpp  OSINTModule.hpp  PhoneLookup.hpp  UsernameLookup.hpp  WHOISLookup.hpp
osint-x/src/utils/: HTTPClient.hpp  KeyRotator.hpp  SimpleJSON.hpp
osint-x/src/web/: WebServer.cpp
